# django-autocompletefilter

./: .gitignore  LICENSE  MANIFEST.in  README.rst  pytest.ini  setup.cfg  setup.py  tox.ini
.github /workflows/: release.yml
.github/workflows/: release.yaml
autocompletefilter/: admin.py  filters.py
autocompletefilter/static/admin/js/: autocomplete_filter.js
autocompletefilter/templates/admin/: filter_autocomplete.html
tests/: test_filter_mixin.py  test_media.py
tests/test_project/: asgi.py  settings.py  urls.py  wsgi.py
tests/test_project/test_app/: admin.py  apps.py  models.py
tests/test_project/test_app/migrations/: 0001_initial.py
