[metadata]
name = django-autocompletefilter
version = 0.0.8
description = Django ModelAdmin list_filter with autocomplete widget.
long_description = file: README.rst

author = Julian Wachholz
author_email = julian@wachholz.ch
url = https://github.com/julianwachholz/django-autocompletefilter
license = MIT
license_files = LICENSE
keywords = django django-admin autocomplete auto-complete filter select2
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.0
    Framework :: Django :: 2.1
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Framework :: Django :: 4.2
    Framework :: Django :: 5.0
    Framework :: Django :: 5.1
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
python_requires = >=3.7
install_requires =
    Django >= 2.0
packages = find:
include_package_data = true

[options.packages.find]
exclude =
    tests

[flake8]
exclude = .git,__pycache__,.venv,build,dist
max-line-length = 119
# don't force docstrings
ignore = D100,D101,D102,D103,D104,D105,D106,D107
